--- a/helpdesk-admin/package.json
+++ b/helpdesk-admin/package.json
@@ -17,5 +17,9 @@
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.2",
+        "vue-unicons": "^3.3.1"
     }
 }
